--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/resources/application-database.yml
-
 ### STS ###
 .apt_generated
 .classpath
@@ -36,3 +34,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Custom ###
+src/main/resources/application-database.yml
