카카오, 구글 OAuth 인증 자체 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
- application:
-  name: playground
- messages:
-  basename: messages, errors
+  application:
+    name: playground
+  messages:
+    basename: messages, errors
 
- config:
-  import:
-   - classpath:/application-database.yml
-   - classpath:/application-jpa.yml
+  config:
+    import:
+      - classpath:/application-database.yml
+      - classpath:/application-jpa.yml
+      - classpath:/application-auth.yml
