--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+src/main/resources/*.yml
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,5 +37,3 @@ out/
 ### VS Code ###
 .vscode/
 
-### Custom ###
-src/main/resources/application-database.yml
