refactor: 예외 처리 리팩토리

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,6 +1,5 @@
-server.error=서버 내부 오류 발생
-invalid.request=잘못된 요청
-
+SERVER_ERROR=서버 내부 오류 발생
+INVALID_REQUEST=잘못된 요청
 # 검증
 NotNull={0} 값이 null로 전달됨
 NotBlank={0} 값이 주어지지 않음.
