refactor: 코드 수정 및 레디스 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
       - classpath:/application-database.yml
       - classpath:/application-jpa.yml
       - classpath:/application-auth.yml
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 6000
