--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
 
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 //	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 //	testImplementation 'org.springframework.security:spring-security-test'
