--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -4,6 +4,7 @@ INVALID_AUTHORIZATION_CODE=유효하지 않은 인증 코드
 ACCESS_TOKEN_EXPIRED=엑세스 토큰 만료
 REFRESH_TOKEN_EXPIRED=리프레시 토큰 만료
 TOKEN_NOT_MATCHED=엑세스 토큰과 리프레시 토큰 불일치
+GOOGLE_SERVER_ERROR=알림을 보내던 도중 오류 발생, 디바이스 토큰 재확인
 # 검증
 NotNull={0} 값이 null로 전달됨
 NotBlank={0} 값이 주어지지 않음.
