--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
       host: localhost
       port: 6379
       timeout: 6000
+
+fcm:
+  project-id: playground-35617
+  config-path: fcm/playground-35617-firebase-adminsdk-na6ff-bd50739ddb.json
