--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/resources/*.yml
+src/main/resources/application-*.yml
 src/main/resources/fcm/
 
 ### STS ###
