--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,15 @@ spring:
   messages:
     basename: messages, errors
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+
   config:
     import:
       - classpath:/application-database.yml
@@ -17,5 +26,4 @@ spring:
       timeout: 6000
 
 fcm:
-  project-id: playground-35617
   config-path: fcm/playground-35617-firebase-adminsdk-na6ff-bd50739ddb.json
